--- a/src/App.css
+++ b/src/App.css
@@ -1,29 +1,236 @@
 
-header {
-align-items: center;
-display: flex;
-box-sizing: border-box;
-height: 54px;
-justify-content: space-between;
-margin: auto;
-max-width: 1716px;
-padding-left: 22px;
-padding-right: 20px;
-width: 100%;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
+}
+body{
+  background: #436686;
+}
+::selection{
+    color: #fff;
+    background: #22449b;
 }
 
-html {
-    background-color: #00060e;
-    color: white;
+.wrapper {
+    margin: 50px;
+    display: grid;
+    gap: 25px;
+    grid-template-columns: repeat(auto-fill, 265px);
+}
+
+.wrapper li{
+    height: 250px;
+    list-style: none;
+    border-radius: 5px;
+    padding: 15px 20px 20px;
+    background: #fff;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.05);
+  }
+
+.add-box, .icon, .bottom-content,
+.settings .menu li, .popup, header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.add-box {
+    flex-direction: column;
+    justify-content: center;
+    cursor: pointer;
+}
+
+.add-box .icon {
+    height: 78px;
+    width: 78px;
+    color: rgb(240, 240, 240);
+    font-size: 40px;
+    border-radius: 50%;
+    justify-content: center;
+    border: 2px dashed rgb(32, 27, 18);
+}
+
+.add-box p{
+    color: rgb(180, 180, 180);
+    font-weight: 500;
+    margin-top: 20px;
+}
+
+.wrapper .note {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.note p {
+    font-size: 22px;
+    font-weight: 500;
+}
+
+.note span {
+    display: block;
+    margin-top: 5px;
+    color: #575757;
+    font-size: 16px;
+}
+
+.note .bottom-content{
+    border-top: 1px solid rgb(63, 52, 52);
+    padding-top: 10px;
+}
+
+.bottom-content span {
+    color: #6d6d6d;
+    font-size: 15px; 
+}
+
+.bottom-content .settings i{
+    color: #6d6d6d;
+    font-size: 15px;
+    cursor: pointer;
 }
 
 
-a {
-    color:orange;
-  
+.settings {
+    position: relative;
 }
 
-button {
-    color: white;
-    background-color: red;
+.settings .menu {
+    position: absolute;
+    bottom: 0;
+    right: -5px;
+    padding: 5px 0;
+    background: #fff;
+    border-radius: 4px;
+    transform: scale(0);
+    transform-origin:  bottom right;
+    box-shadow: 0 0 6px rgba(0,0,0,0.15);
+    transition: transform 0.2s ease;
 }
+
+.settings:hober .menu {
+    transform: scale(1);
+}
+
+.settings .menu li {
+    height:25px;
+    font-size: 16px;
+    border-radius: 0;
+    padding: 17px 15px;
+    background: #f5f5f5;
+    justify-content: flex-start;
+}
+
+.menu li:hover {
+    background: #f5f5f5;
+}
+
+.menu li i {
+    padding-right: 8px;
+}
+
+
+
+
+/* COSAS DEL POP UP */
+
+.popup-box {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    z-index: 2;
+    background: rgba(0,0,0,0.4);
+}
+
+.popup-box .popup {
+    position:absolute;
+    top: 50%;
+    left: 50%;
+    z-index: 3;
+    max-width: 400px;
+    width: 100%;
+    justify-content: center;
+    transform: translate(-50%, -50%);
+}
+
+.popup-box, .popup-box .popup {
+    opacity: 0;
+    pointer-events: none;
+    transition: all 0.25s ease;
+}
+
+.popup-box.show, .popup-box.show .popup {
+    opacity: 1;
+    pointer-events: auto;
+}
+
+
+.popup .content{
+    width: calc(100% - 15px);
+    background: #fff;
+    border-radius: 5px;
+}
+
+.popup .content header {
+    padding: 15px 25px;
+    border-bottom: 1px solid #ccc;
+}
+
+.content header p {
+    font-size: 20px;
+    font-weight: 500;
+}
+
+.content header i {
+    color: #8b8989;
+    cursor: pointer;
+    font-size: 23px;
+}
+
+.content form {
+    margin: 15px 25px 35px;
+}
+
+.content form .row {
+    margin-bottom: 20px;
+}
+
+form .row label {
+    display: block;
+    font-size: 18px;
+    margin-bottom: 6px;
+}
+
+.content form :where(input, textarea) {
+    width: 100%;
+    height:50px;
+    outline: none;
+    font-size: 17px;
+    padding: 0 15px;
+    border-radius: 4px;
+    border: 1px solid #999;
+}
+
+.content form textarea {
+    height: 150px;
+    resize: none;
+    padding: 8px 15px;
+}
+
+.content form button {
+    width: 100%;
+    height: 50px;
+    border: none;
+    outline: none;
+    color: #fff;
+    cursor: pointer;
+    font-size: 17px;
+    border-radius: 4px;
+    background: #6a93f8;
+}
+
