--- a/src/App.css
+++ b/src/App.css
@@ -7,11 +7,15 @@
   font-family: 'Poppins', sans-serif;
 }
 body{
-  background: #436686;
+  background: #2d2e4b;
 }
 ::selection{
     color: #fff;
-    background: #22449b;
+    background: #2e2f49;
+}
+
+a {
+    color: #FF9677;
 }
 
 .wrapper {
@@ -50,7 +54,7 @@ body{
     font-size: 40px;
     border-radius: 50%;
     justify-content: center;
-    border: 2px dashed rgb(32, 27, 18);
+    border: 2px dashed rgb(243, 241, 237);
 }
 
 .add-box p{
@@ -125,7 +129,7 @@ body{
 }
 
 .menu li:hover {
-    background: #f5f5f5;
+    background: #978d8d;
 }
 
 .menu li i {
@@ -135,7 +139,7 @@ body{
 
 
 
-/* COSAS DEL POP UP */
+/* CSS DEL POP UP NEW NOTE */
 
 .popup-box {
     position: fixed;
@@ -234,3 +238,82 @@ form .row label {
     background: #6a93f8;
 }
 
+.category {
+    padding-top: 70px;
+}
+
+
+
+/* CSS DEL RADIO BUTTON */
+.switch {
+  position: absolute;
+  top:57%;
+  left: 28%;
+  width: 150px;
+  height: 50px;
+  text-align: center;
+  margin: -30px 0 0 -75px;
+  background: #00bc9c;
+  transition: all 0.2s ease;
+  border-radius: 25px;
+}
+.switch span {
+  position: absolute;
+  width: 20px;
+  height: 4px;
+  top: 50%;
+  left: 50%;
+  margin: -2px 0px 0px -4px;
+  background: #fff;
+  display: block;
+  transform: rotate(-45deg);
+  transition: all 0.2s ease;
+}
+.switch span:after {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 4px;
+  height: 12px;
+  margin-top: -8px;
+  background: #fff;
+  transition: all 0.2s ease;
+}
+input[type=radio] {
+  display: none;
+}
+.switch label {
+  cursor: pointer;
+  color: rgba(0,0,0,0.2);
+  width: 60px;
+  line-height: 50px;
+  transition: all 0.2s ease;
+}
+label[for=yes] {
+  position: absolute;
+  left: 0px;
+  height: 20px;
+}
+label[for=no] {
+  position: absolute;
+  right: 0px;
+}
+#no:checked ~ .switch {
+  background: #eb4f37;
+}
+#no:checked ~ .switch span {
+  background: #fff;
+  margin-left: -8px;
+}
+#no:checked ~ .switch span:after {
+  background: #fff;
+  height: 20px;
+  margin-top: -8px;
+  margin-left: 8px;
+}
+#yes:checked ~ .switch label[for=yes] {
+  color: #fff;
+}
+#no:checked ~ .switch label[for=no] {
+  color: #fff;
+}
