--- a/src/App.css
+++ b/src/App.css
@@ -16,8 +16,13 @@ body{
     background: #2e2f49;
 }
 
+p.user-page-p {
+    color: white;
+}
+
+
 a {
-    color: #FF9677;
+    color: #ffffff;
     padding:17px;
     text-decoration: none;
 }
@@ -49,20 +54,20 @@ a.userpage-link {
     
 }
 
+/* CSS DE LA NOTA */
+
 .wrapper {
-    margin: 20px 20px 20px 20px;
+    margin: 20px 0px 20px 0px;
     display: grid;
     gap: 25px;
     grid-template-columns: repeat(auto-fill, 1fr);
 }
 
 .wrapper li {
-    height: 250px;
+    height: max-content;
     list-style: none;
     border-radius: 5px;
-    padding: 15px 20px 20px ;
-    background: #fff;
-    box-shadow: 0 4px 8px rgba(0,0,0,0.05);
+    box-shadow: 20px 30px 18px rgba(0,0,0,0.5);
   }
 
 .add-box, .icon, .bottom-content,
@@ -98,48 +103,63 @@ a.userpage-link {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    background-color: #000;
+}
+
+.note-user-link {
+    padding: 0;
+    color: orange;
 }
 
 .note p {
     font-size: 1rem;
+    text-align: center;
+    padding: 5px 5px 5px 5px;
     font-weight: 500;
+    background-color: #000000;
+    color: #fffefe;
 }
 
 .note span {
+    text-align: center;
+    padding: 0px 5px 0px 5px;
     display: block;
-    margin-top: 5px;
-    color: #575757;
+    margin-top: 0px;
+    color: #ffffff;
     font-size: 1rem;
 }
 
 .note .bottom-content{
     border-top: 1px solid rgb(63, 52, 52);
     padding-top: 10px;
+    padding-left: 5px;
+    padding-right: 20px;
+    padding-bottom: 5px;
 }
 
 .bottom-content span {
-    color: #6d6d6d;
+    color: #ffffff;
     font-size: 15px; 
 }
 
 .bottom-content .settings i{
-    color: #6d6d6d;
+    color: #ffffff;
     width:75px;
     font-size: 15px;
     cursor: pointer;
 }
-
 
 .settings {
     position: relative;
 }
 
 .settings .menu {
+    border:solid 2px rgb(27, 24, 24);
     position: absolute;
     bottom: 0;
     right: -5px;
     padding: 5px 0;
-    background: #fff;
+    background: rgb(0, 0, 0);
     border-radius: 4px;
     transform: scale(0);
     transform-origin:  bottom right;
@@ -156,7 +176,7 @@ a.userpage-link {
     font-size: 16px;
     border-radius: 0;
     padding: 17px 15px;
-    background: #f5f5f5;
+    background: #000000;
     justify-content: flex-start;
 }
 
@@ -166,6 +186,34 @@ a.userpage-link {
 
 .menu li i {
     padding-right: 8px;
+}
+
+
+
+@media screen and (max-width: 700px) {
+
+    .note span {
+    font-size: 0.9rem;
+    color: lightgray;
+    }
+    
+    img {
+        object-fit: cover;
+        width: 100%;
+    }
+
+    p.note-title{
+        text-align: center;
+        display: block;
+        font-size: 1.2rem;
+       
+        font-weight: 100; 
+    }
+
+    .details {
+        display: grid;
+        grid-template-rows: max-content
+    }
 }
 
 /* CSS de la barra del Search */
@@ -385,6 +433,13 @@ footer {
     width: 100%;
     place-items: center;
 }
+.form-cross {
+    color:rgb(255, 102, 0) ;
+    z-index: 3;
+    margin-right: 30px;
+    height: 30px;
+    width: 50px;
+    }
 
 .loginregisterwrapper{
     overflow: hidden;
@@ -392,7 +447,7 @@ footer {
     background: #fff;
     padding: 30px;
     border-radius: 5px;
-    box-shadow: 0px 15px 20px rgba(0,0,0,0.1);
+    box-shadow: 20px 30px 30px rgba(0, 0, 0, 0.8);
   }
   .loginregisterwrapper .title-text{
     display: flex;
@@ -571,19 +626,49 @@ footer {
   /* CSS DEL POP UP DEL FORMULARIO DE REGISTRO Y LOGIN */
 
 .form-main {
-    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    z-index: 2;
+    background: rgba(0,0,0,0.4);
 }
 
-.show-form-main{
-    display:inline;
+.form-main .loginregisterwrapper{
+    position:absolute;
+    top: 50%;
+    left: 50%;
+    z-index: 3;
+    max-width: 400px;
+    width: 80%;
+    justify-content: center;
+    transform: translate(-50%, -50%);
 }
+
+.form-main, .form-main .show-form-main{
+    opacity: 0;
+    pointer-events: none;
+    transition: all 0.8s ease-in-out;
+}
+
+.form-main.show-form-main, 
+.form-main.show-form-main .loginregisterwrapper{
+    opacity: 1;
+    pointer-events: auto;
+}
+
+
+
 
  
 /* CSS del Header */
 header {
+    overflow: hidden;
     padding-bottom: 10px;
     padding-top: 5px;
     vertical-align: middle;
+    width: 100%;
 }
 
 .header-login {
@@ -597,6 +682,10 @@ header {
     padding: 6px 20px;
     cursor: pointer;
     border: none;
+}
+
+.logout-icon {
+    color:orange;
 }
 
 /* */
