--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
   font-family: 'Poppins', sans-serif;
 }
 body{
-  background: #001935;
+  background: #000000;
 }
 ::selection{
     color: #fff;
@@ -130,7 +130,7 @@ a.userpage-link {
 }
 
 .note .bottom-content{
-    border-top: 1px solid rgb(63, 52, 52);
+    border-bottom: 1px solid rgb(63, 52, 52);
     padding-top: 10px;
     padding-left: 5px;
     padding-right: 20px;
@@ -198,8 +198,9 @@ a.userpage-link {
     }
     
     img {
-        object-fit: cover;
-        width: 100%;
+        object-fit:cover;
+        width:100%;
+        height:500px;
     }
 
     p.note-title{
@@ -576,11 +577,13 @@ footer {
     margin-top: 5px;
   }
   .form-inner form .signup-link{
+    font-size: 12px;
     text-align: center;
     margin-top: 30px;
   }
   .form-inner form .pass-link a,
   .form-inner form .signup-link a{
+    font-size: 14px;
     color: #fa4299;
     text-decoration: none;
   }
@@ -659,7 +662,9 @@ footer {
 }
 
 
-
+main {
+  background-color: #000;
+}
 
  
 /* CSS del Header */
@@ -669,6 +674,27 @@ header {
     padding-top: 5px;
     vertical-align: middle;
     width: 100%;
+    background-color: rgb(255, 255, 255);
+}
+
+.main-header {
+  background-color: #000;
+  
+}
+
+div.search {
+  border-bottom: 1px solid rgb(63, 52, 52);
+}
+
+.searchicon {
+  position:absolute;
+  top: 2.2%;
+  left: 18.5%;
+  width: 40px;
+  height: 38px;
+  color:#00bc9c;
+  
+  
 }
 
 .header-login {
@@ -685,11 +711,23 @@ header {
 }
 
 .logout-icon {
-    color:orange;
+    color:crimson;
 }
 
 /* */
 
 h1 {
     color: white;
+}
+
+.container {
+  background-color: rgb(0, 0, 0);
+}
+
+.avatar-link {
+  padding-top: 8px;
+}
+
+.bsperson {
+  color:#2eca19
 }
