--- a/src/App.css
+++ b/src/App.css
@@ -294,11 +294,12 @@ a.userpage-link {
     width: calc(100% - 50px);
     background: #fff;
     border-radius: 5px;
+    opacity: 0.94;
     
 }
 
 .popup .content header {
-    padding: 15px 25px;
+    padding: 5px 25px;
     border-bottom: 1px solid #ccc;
 }
 
@@ -314,7 +315,7 @@ a.userpage-link {
 }
 
 .content form {
-    margin: 15px 25px 35px;
+    margin: 15px 25px 15px;
 }
 
 .content form .row {
@@ -325,6 +326,7 @@ form .row label {
     display: block;
     font-size: 18px;
     margin-bottom: 6px;
+    color: #000;
 }
 
 .content form :where(input, textarea) {
@@ -365,7 +367,7 @@ form .row label {
 .switch {
   position: absolute;
   top:57%;
-  left: 28%;
+  left: 50%;
   width: 150px;
   height: 50px;
   text-align: center;
@@ -401,7 +403,7 @@ input[type=radio] {
 }
 .switch label {
   cursor: pointer;
-  color: rgba(0,0,0,0.2);
+  color: rgba(0,0,0,0.5);
   width: 60px;
   line-height: 50px;
   transition: all 0.2s ease;
@@ -517,7 +519,7 @@ footer {
     left: 0;
     z-index: 0;
     border-radius: 5px;
-    background: -webkit-linear-gradient(left, #a445b2, #fa4299);
+    background: -webkit-linear-gradient(left, #770101, #e7630a);
     transition: all 0.6s cubic-bezier(0.68,-0.55,0.265,1.55);
   }
   input[type="radio"]{
@@ -547,7 +549,7 @@ footer {
   }
   
   span.signup-now {
-      color:#f86ab1;
+      color:#000000;
       padding: 10px;
   }
 
@@ -602,7 +604,7 @@ footer {
   .form-inner form .pass-link a,
   .form-inner form .signup-link a{
     font-size: 14px;
-    color: #fa4299;
+    color: #810901;
     text-decoration: none;
   }
   .form-inner form .pass-link a:hover,
@@ -621,7 +623,7 @@ footer {
     width: 300%;
     position: absolute;
     left: -100%;
-    background: -webkit-linear-gradient(right, #a445b2, #fa4299, #a445b2, #fa4299);
+    background: -webkit-linear-gradient(right, #2ab115da, #44b931, #072401, #09c728);
     border-radius: 5px;
     transition: all 0.4s ease;;
   }
@@ -716,7 +718,7 @@ div.search {
 .header-login {
     color: rgb(0, 0, 0);
     background-color: #00cf35;
-    margin-right: 20px;
+    margin-right: 22px;
     border-radius: 5px;
     font-size: 0.9rem;
     font-weight: 600;
@@ -749,4 +751,14 @@ h1 {
 
 .bsperson {
   color:#2eca19
+}
+
+section.not-found-page{
+  text-align: center;
+  text-decoration: underline solid;
+}
+
+img.image-preview {
+  width: 100px;
+  height: 10px;
 }
