--- a/src/App.css
+++ b/src/App.css
@@ -241,7 +241,7 @@ a.userpage-link {
 .search input {
     border: none;
     border-radius: 10px;
-    background-color:rgba(243, 241, 237, 0.055);
+    background-color:rgb(0, 0, 0);
     color: white;
     padding-left: 8px;
     width: 315px;
@@ -324,19 +324,42 @@ a.userpage-link {
 
 form .row label {
     display: block;
-    font-size: 18px;
     margin-bottom: 6px;
     color: #000;
 }
 
 .content form :where(input, textarea) {
     width: 100%;
-    height:50px;
+    height:30px;
     outline: none;
     font-size: 17px;
     padding: 0 15px;
     border-radius: 4px;
     border: 1px solid #999;
+}
+
+input.form-image-resize {
+  border: none;
+  border-radius:0px;
+  background-color: rgb(255, 255, 255);
+  color: rgb(206, 67, 12);
+  padding-left: 0;
+  display: inline;
+  padding-right: 10px;
+  
+}
+
+input#image {
+  display:none;
+}
+
+
+
+figure {
+  display:inline-flex;
+  padding-left: 0px;
+  padding-top: 5px;
+  padding-bottom: 10px;
 }
 
 .content form textarea {
@@ -346,6 +369,7 @@ form .row label {
 }
 
 .content form button {
+    margin-top: 15px;
     width: 100%;
     height: 50px;
     border: none;
@@ -358,50 +382,49 @@ form .row label {
 }
 
 .category {
-    padding-top: 70px;
+    padding-top: 0px;
 }
 
 
 
 /* CSS DEL RADIO BUTTON DE NEW NOTE */
 .switch {
-  position: absolute;
-  top:57%;
-  left: 50%;
+  align-content: center;
+  padding-left: -2px;
   width: 150px;
   height: 50px;
   text-align: center;
-  margin: -30px 0 0 -75px;
+  margin: 0px 0 0 0px;
   background: #00bc9c;
-  transition: all 0.2s ease;
+  transition: all 0.5s ease;
   border-radius: 25px;
 }
 .switch span {
-  position: absolute;
-  width: 20px;
-  height: 4px;
-  top: 50%;
-  left: 50%;
-  margin: -2px 0px 0px -4px;
-  background: #fff;
+  background: rgb(255, 255, 255);
   display: block;
   transform: rotate(-45deg);
   transition: all 0.2s ease;
 }
 .switch span:after {
   content: "";
-  display: block;
-  position: absolute;
+  display: inline;
+  background-color: #000;
+
   width: 4px;
   height: 12px;
-  margin-top: -8px;
   background: #fff;
   transition: all 0.2s ease;
 }
 input[type=radio] {
   display: none;
 }
+
+.toggle-radio {
+  align-items: center;
+  padding-top: 15px;
+}
 .switch label {
+  padding:0px 20px 0px 20px ;
   cursor: pointer;
   color: rgba(0,0,0,0.5);
   width: 60px;
@@ -409,26 +432,23 @@ input[type=radio] {
   transition: all 0.2s ease;
 }
 label[for=yes] {
-  position: absolute;
-  left: 0px;
+  text-align: center;
+
   height: 20px;
 }
 label[for=no] {
-  position: absolute;
-  right: 0px;
+
 }
 #no:checked ~ .switch {
   background: #eb4f37;
 }
 #no:checked ~ .switch span {
   background: #fff;
-  margin-left: -8px;
+
 }
 #no:checked ~ .switch span:after {
   background: #fff;
   height: 20px;
-  margin-top: -8px;
-  margin-left: 8px;
 }
 #yes:checked ~ .switch label[for=yes] {
   color: #fff;
@@ -705,11 +725,9 @@ div.search {
 }
 
 .searchicon {
-  position:absolute;
-  top: 2.2%;
-  left: 18.5%;
-  width: 40px;
-  height: 38px;
+  width: 45px;
+  height: 41px;
+  padding-left: 6px;
   color:#00bc9c;
   
   
@@ -759,6 +777,24 @@ section.not-found-page{
 }
 
 img.image-preview {
-  width: 100px;
-  height: 10px;
+  object-fit:contain;
+  display: inline;
+  align-items: left;
+  height: 50px;
+  padding-bottom: 0px;
+}
+
+div.row.image {
+  margin-bottom: 0px;
+}
+
+.label-image-newnote {
+  align-items: center;
+}
+
+.error-p{
+  color: red;
+  padding-bottom: 5px;
+  padding-top: 5px;
+  text-align: center;
 }
